--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 </a>
             </div>
             <div class="pic2">
-                <a href="https://i.imgur.com/iAOHoUS.png">
+                <a href="https://i.imgur.com/oAt4qbP.png">
                     <img src="images/2022-2.png" alt="">
                 </a>
             </div>
